# cove

./: Cargo.toml  LICENSE  README.md
cove/: Cargo.toml  README.md
cove/src/: lib.rs
examples/: asm.rs
num/: Cargo.toml  README.md
num/src/: cast.rs  lib.rs  limits.rs
src/: base.rs  bounds.rs  cast.rs  casts.rs  errors.rs  lib.rs  nonzero.rs  prelude.rs  primitives.rs
src/docs/: mod.rs  motivation.rs  performance.rs
src/doctests/: bitwise.rs  lossless.rs  mod.rs
src/impls/: bitwise.rs  blanket.rs  mod.rs  nonzero.rs  primitives.rs  same_size.rs
tests/: cast.rs  lossy.rs  nonzero.rs  random.rs
tests/integration/: assumed_lossless.rs  bitwise.rs  closest.rs  lossless.rs  lossy.rs  main.rs  nonzero.rs  random.rs
tests/integration/util/: is_nan.rs  mod.rs  random.rs  settings.rs
tests/util/: fixed_string.rs  mod.rs  random.rs  settings.rs
